--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
 
     <groupId>sima</groupId>
     <artifactId>tendermint</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>sima</groupId>
             <artifactId>core</artifactId>
-            <version>1.3.309</version>
+            <version>1.3.311</version>
         </dependency>
     </dependencies>
 
@@ -125,6 +125,14 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
