--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,60 +1,87 @@
 default:
-  image: maven-nexus
+  image: maven:3.8.2-openjdk-16
 
 stages:
   - build
   - test
-  - sonarscan
-  - deploy
+  - deploy-artifact
 
 cache:
-  paths:
-    - .m2/repository
-  # keep cache across branch
-  key: "$CI_BUILD_REF_NAME"
+  - key: "$CI_COMMIT_REF_SLUG"
+    paths:
+      - .m2/repository
+      - $CI_PROJECT_DIR
+      - .sonar/cache
 
 variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository"
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml"
   GIT_DEPTH: 0
+  GIT_CLONE_PATH: $CI_BUILDS_DIR/Si-MA
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
 
-build:
+compile-job:
   stage: build
+  artifacts:
+    paths:
+      - "target"
   script:
-    - mvn install -DskipTests
+    - mvn $MAVEN_CLI_OPTS clean compile
   when: always
   only:
     - pushes
     - merge_requests
 
-test:
+test-job:
   stage: test
+  needs: [ "compile-job" ]
+  artifacts:
+    paths:
+      - "target"
   script:
-    - mvn test
-  when: always
+    - mvn $MAVEN_CLI_OPTS clean test
+  when: on_success
   only:
     - pushes
+    - merge_requests
+
+integration-test-job:
+  stage: test
+  needs: [ "compile-job" ]
+  artifacts:
+    paths:
+      - "target"
+  script:
+    - mvn $MAVEN_CLI_OPTS clean verify
+  allow_failure: true
+  when: on_success
+  only:
     - merge_requests
 
 sonarqube-check:
-  stage: sonarscan
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-  cache:
-    key: "${CI_JOB_NAME}"
+  stage: test
+  needs: [ "compile-job" ]
+  artifacts:
     paths:
-      - .sonar/cache
+      - "target"
   script:
-    - mvn clean install verify sonar:sonar
+    - mvn $MAVEN_CLI_OPTS clean install sonar:sonar
   allow_failure: true
+  when: on_success
   only:
-    - pushes
     - merge_requests
-
-deploy:
-  stage: deploy
-  script:
-    - mvn deploy clean -Dmaven.test.skip=true
-  only:
     - master
-    - tags
+
+deploy-artifact-job:
+  stage: deploy-artifact
+  needs: [ "compile-job", "test-job" ]
+  artifacts:
+    paths:
+      - "target/*.jar"
+  script:
+    - mvn $MAVEN_CLI_OPTS -Dmaven.test.skip=true clean deploy
+  only:
+    refs:
+      - merge_requests
+    changes:
+      - pom.xml
+  when: manual
