--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>sima</groupId>
             <artifactId>core</artifactId>
-            <version>1.3.311</version>
+            <version>1.5.12-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
